feat(post): add comment to the posts
