# routes/posts.route.js
@@ -6,5 +6,5 @@ var router = express.Router()
 
 router.post('/add-post', postsController.addPost)
 router.get('/get-all-post', postsController.getAllPosts)
-
+router.post("/add-post-comment", postsController.addPostComment);
 module.exports = router
